# LearnCmake

./: README.md
Dylib/: CMakeLists.txt  Hello.cpp  Hello.h  main.cpp
LinkLibs/: CMakeLists.txt  main.cpp
MultiDirs/: CMakeLists.txt  main.cpp
MultiDirs/Dependency/: CMakeLists.txt  Hello.cpp  Hello.h
MultiFiles/: CMakeLists.txt
Simplest/: CMakeLists.txt  SimpleDemo  main.cpp
Tutorial/: CMakeLists.txt  main.cpp
Tutorial/math/: CMakeLists.txt  MatFunctions.cpp  MathFunctions.h
